Modified some css style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>STANDARD CALCULATOR</h1>
     <table border="2" height="300px" width="250px" align="center">
         <tr>
-            <td colspan="4"><input type="number" style="width:97%; border-radius: 10px;" placeholder="0"></td>
+            <td colspan="4" id="sreach"><input type="number" style="width:97%; border-radius: 10px;"  placeholder="0"></td>
         </tr>
         <tr>
             <td align="center"><button>%</button></td>
@@ -44,10 +44,10 @@
             <td align="center"><button>+</button></td>
         </tr>
         <tr>
-            <td align="center" id="rightend"><button>+/_</button></td>
+            <td align="center" id="leftend"><button>+/_</button></td>
             <td align="center"><button>0</button></td>
             <td align="center"><button>.</button></td>
-            <td align="center" id="leftend"><button id="equal">=</button></td>
+            <td align="center" id="rightend"><button id="equal">=</button></td>
         </tr>
     </table>
 </body>
