Modified some design

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>STANDARD CALCULATOR</h1>
-    <table border="2" height="300px" width="250px" align="center">
-        <tr>
-            <td colspan="4" id="sreach"><input type="number" style="width:97%; border-radius: 10px;"  placeholder="0"></td>
+    <h1>STANDARD  CALCULATOR</h1>
+    <table border="2" height="530px" width="430px" align="center">
+        <tr >
+            <td colspan="4" id="sreach" style="height: 80px;"><input type="number" style="width:98%; height:71px; border-radius: 15px; font-size: 35px;"  placeholder="0"></td>
         </tr>
         <tr>
             <td align="center"><button>%</button></td>
